packages/svelte/tests/validator/samples/transition-on-component/input.svelte
<script>
	import Widget from './Widget.svelte';

	function foo() {}
</script>

<Widget in:foo/>